# FitsIP

./: .gitignore  CMakeLists.txt  README.md
src/00Obsolete/: CMakeLists.txt
src/00Obsolete/0Obsolete/: opgrow.h  opshrink.cpp  opshrink.h
src/app/: CMakeLists.txt  appsettings.cpp  appsettings.h  consolewidget.cpp  consolewidget.h  consolewidget.ui  cursors.qrc  filelistwidget.cpp  filelistwidget.h  filelistwidget.ui  filesystemview.cpp  filesystemview.h  filesystemview.ui  histogramview.cpp  histogramview.h  histogramview.ui  icons.qrc  imagewidget.cpp  imagewidget.h  logbookwidget.cpp  logbookwidget.h  logbookwidget.ui  logwidget.cpp  logwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  palettefactory.cpp  palettefactory.h  pixellistwidget.cpp  pixellistwidget.h  profilertablemodel.h  profilerwidget.cpp  profilerwidget.h  profileview.cpp  profileview.h  profileview.ui  pythonscript.cpp  pythonscript.h  (+7 more)
src/app/dialogs/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addcameradialog.cpp  addcameradialog.h  addcameradialog.ui  addlogbookentrydialog.cpp  addlogbookentrydialog.h  addlogbookentrydialog.ui  addtelescopedialog.cpp  addtelescopedialog.h  addtelescopedialog.ui  cameradatabasedialog.cpp  cameradatabasedialog.h  cameradatabasedialog.ui  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  editmetadatadialog.cpp  editmetadatadialog.h  editmetadatadialog.ui  logbookexportdialog.cpp  logbookexportdialog.h  logbookexportdialog.ui  logbookfilter1dialog.cpp  logbookfilter1dialog.h  logbookfilter1dialog.ui  logbookfilterdialog.cpp  logbookfilterdialog.h  logbookfilterdialog.ui  logbookpropertiesdialog.cpp  logbookpropertiesdialog.h  logbookpropertiesdialog.ui  logentryeditdialog.cpp  logentryeditdialog.h  logentryeditdialog.ui  psfmanagerdialog.cpp  psfmanagerdialog.h  psfmanagerdialog.ui  stardialog.cpp  (+8 more)
src/app/widgets/: annotationswidget.cpp  annotationswidget.h  consolewidget.cpp  consolewidget.ui  filelistwidget.cpp  filesystemview.cpp  filesystemview.h  historytablewidget.cpp  historytablewidget.h  imagewidget.cpp  logbookwidget.cpp  logbookwidget.h  logwidget.cpp  logwidget.h  logwidget.ui  metadatatablewidget.cpp  metadatatablewidget.h  metadatatablewidget.ui  pixellistwidget.cpp  pixellistwidget.h  pixellistwidget.ui  profilertablemodel.cpp  profilertablemodel.h  profilerwidget.cpp  profilerwidget.h  profilerwidget.ui  profileview.cpp  profileview.h  profileview.ui  starlistwidget.cpp  starlistwidget.h  starlistwidget.ui
src/fitsbase/: CMakeLists.txt  externaltoolslauncher.cpp  externaltoolslauncher.h  filelist.cpp  fitsimage.cpp  fitsimage.h  fitsobject.cpp  fitsobject.h  fitstypes.h  histogram.cpp  histogram.h  imagecollection.cpp  imagecollection.h  imagemetadata.cpp  imagemetadata.h  imagestatistics.cpp  opplugin.cpp  opplugin.h  opplugincollection.h  pixel.h  pixeliterator.cpp  pixeliterator.h  pixellist.cpp  pixellist.h  plugin.cpp  plugin.h  pluginfactory.cpp  pluginfactory.h  pythonbase.cpp  pythonbase.h  settings.cpp  settings.h  star.h  starlist.cpp  starlist.h  undostack.cpp
src/fitsbase/dialogs/: imageselectdialog.cpp  imageselectdialog.h  imageselectdialog.ui  imageselectwidget.cpp  imageselectwidget.h  imageselectwidget.ui  pluginfilelistreturndialog.h  progressdialog.h  psfdialog.cpp  psfdialog.h  psfdialog.ui  twovaluedialog.cpp  twovaluedialog.h  twovaluedialog.ui
src/fitsbase/io/: astroimageio.cpp  cookbookio.cpp  fitsio.cpp  fitsio.h  iofactory.cpp  iofactory.h  qtimageio.cpp  rawio.cpp  rawio.h
src/fitsbase/logbook/: abstractlogbookstorage.cpp  abstractlogbookstorage.h  logbook.cpp  logbook.h  logbookentry.cpp  logbookentry.h  logbookstorage.cpp  logbookstorage.h  xmllogbookstorage.cpp  xmllogbookstorage.h
src/fitsbase/math/: average.cpp  fitpar.h  gaussfit.h  mathfunctions.h  moments.cpp  moments.h  utils.cpp  utils.h
src/fitsbase/profiling/: simpleprofiler.cpp
src/fitsbase/psf/: cosinebellpsf.cpp  cosinebellpsf.h  imagepsf.cpp  psf.cpp  psf.h  psffactory.cpp  psffactory.h
src/fitsbase/qconsolewidget/: QConsoleIODevice.h  QConsoleWidget.h  qconsoleiodevice.cpp  qconsolewidget.cpp
src/fitsbase/widgets/: previewoptions.h  previewwidget.cpp  profilechart.cpp  profilechart.h  psfwidget.cpp  psfwidget.h
src/fitsip/core/: CMakeLists.txt  annotation.cpp  annotation.h  annotations.cpp  annotations.h  filelist.cpp  filelist.h  fitsconfig.h.in  fitsimage.cpp  fitsimage.h  fitsobject.cpp  fitsobject.h  fitstypes.h  fitsvaluetype.h.in  histogram.cpp  histogram.h  imagecollection.cpp  imagecollection.h  imagemetadata.cpp  imagestatistics.cpp  imagestatistics.h  kernel.cpp  kernel.h  kernelrepository.h  opplugin.cpp  opplugin.h  opplugincollection.cpp  opplugincollection.h  pixel.h  pixeliterator.h  pixellist.cpp  pixellist.h  pluginfactory.cpp  pluginfactory.h  profile.cpp  profile.h  pythonbase.cpp  rgbvalue.h  scriptutilities.cpp  scriptutilities.h  (+10 more)
src/fitsip/coreplugins/: CMakeLists.txt  coreplugincollection.cpp  coreplugincollection.h  opadd.cpp  opadd.h  (+48 more)
src/fitspython/: CMakeLists.txt  python_bindings.cpp
src/plugins/: CMakeLists.txt  analyseprofile.cpp  analyseprofile.h  analyseprofiledialog.cpp  analyseprofiledialog.h  analyseprofiledialog.ui  findstars.cpp  findstars.h  findstarsdialog.ui  lucyrichardsondeconvolution.cpp  lucyrichardsondeconvolution.h  lucyrichardsondeconvolutiondialog.cpp  lucyrichardsondeconvolutiondialog.h  lucyrichardsondeconvolutiondialog.ui  measurecrosscorrelation.cpp  measurecrosscorrelation.h  measuredistance.cpp  measuredistance.h  measuredistancedialog.cpp  measuredistancedialog.h  measuredistancedialog.ui  measurematch.cpp  measurematch.h  measurematchdialog.cpp  measurematchdialog.h  measurematchdialog.ui  measurerank.cpp  measurerank.h  measurerankresultdialog.cpp  measurerankresultdialog.h  measurerankresultdialog.ui  measuresharpness.cpp  measuresharpness.h  measuresharpnessresultdialog.cpp  measuresharpnessresultdialog.h  measuresharpnessresultdialog.ui  measurestatistics.cpp  measurestatistics.h  opadd.cpp  opadd.h  (+119 more)
tests/: CMakeLists.txt  gaussfit.cpp
(+357 files in other folders)
